# migrator

./: .gitignore  Cargo.toml  README.md  build.sh
.github/ISSUE_TEMPLATE/: --platform--platform-request.md
examples/format/: open-std-customer.csv  open-std-product.csv  open-std-transaction.csv
examples/input_files/: demo_large_product_export.csv  products_export.csv
pkg/: odm.wasm
src/: lib.rs  main.rs
src/parser/: mod.rs  parse.rs  read.rs
src/parser/format/: lightrail.rs  mod.rs  shopify.rs
