[package]
# OpenRetailDataMigrator
name = "odm-migration-utility"
version = "0.0.2"
edition = "2021"
description = "OpenRetail Data Migrator Utility"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
clap = { version = "4.2.1", features = ["cargo"] }
open-stock = { version = "0.1.15", features = ["types"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
phf = { version = "0.11", features = ["macros"] }
uuid = "1.3.1"
chrono = "0.4.26"
strum = "0.24"
strum_macros = "0.24"
strsim = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
